updated dev env and all dependencies